@@ -60,7 +60,7 @@
 
 <target name="clean">
  <delete failonerror='false'>
-  <fileset dir="${bin}" includes="*.hrc"/>
+  <fileset dir="${bin}" includes="wsdl-soap.hrc, wsdl.hrc"/>
  </delete>
 </target>
 
