@@ -1,3 +1,0 @@
-set path=d:\Programs\devel\bc55\bin;%path%
-
-make -f makefile.bcc
